Fix some typos in prevoius solutions.

--- a/6.tex
+++ b/6.tex
@@ -87,7 +87,7 @@ goes under the TD error eventually, but it would still be pretty slow.
 
 \item \textbf{TD methods.}
 The TD version with $\alpha = 1.5$ plateaued fast at a relatively high error. I expect
-bigger $\alpha$ values to make the convergence faster, but plateaue at a higher value.
+bigger $\alpha$ values to make the convergence faster, but plateaues at a higher value.
 The version with $\alpha = 0.5$ is the best among all shown algorithms. A TD method with a smaller
 $\alpha$ value might reach an even lower error, but the $\alpha = 0.5$ case is already pretty good.
 \end{itemize}
