--- a/7.tex
+++ b/7.tex
@@ -39,7 +39,7 @@
     better algorithm or a worse one? Devise and program a small experiment to answer this
     question empirically.}
 
-    There is only a difference in the two methods if we update state estimes for some states from
+    There is only a difference in the two methods if we update state estimates for some states from
     $\{S_{t + 1}, \dots S_{t + n}\}$ between time steps $t$ and $t + n$. Because of this reason,
     I would like to try the algorithms on a problem where we may return to the same
     state shortly. My expectation is that the $n$-step update works better, because it uses
