--- a/2.tex
+++ b/2.tex
@@ -90,7 +90,7 @@
   With very high probability, the first $10$ choices will cover all the possible actions
   once. After the $10^{th}$ action, we have an estimation of the action values based
   on actually trying them, but the optimal starting value still dominates these estimates.
-  The $11^{th}$ step is chosen based on the rewards, not on the optimisic starting values,
+  The $11^{th}$ step is chosen based on the rewards, not on the optimistic starting values,
   this causes a big spike at step $11$. In steps $11-20$ (with high probability) we will
   choose all the actions once, starting with the action that has the highest estimated
   action value and continuing in this order. After $20$ steps, we will have tried all
@@ -145,7 +145,7 @@
   once, because the optimal starting values dominate the estimated action values.
   After the $10^{th}$ action, we have an estimation of the action values based
   on actually trying them, but the optimal starting value still dominates these estimates.
-  The $11^{th}$ step is thus chosen based on the rewards, not on the optimisic starting values,
+  The $11^{th}$ step is thus chosen based on the rewards, not on the optimistic starting values,
   this causes a big spike at step $11$. In steps $11-20$ (with high probability) we will
   choose all the actions once, starting with the action that has the highest estimated
   action value and continuing in this order.
