Add link to 8.8.

--- a/8.tex
+++ b/8.tex
@@ -110,6 +110,9 @@
     lower part of Figure 8.8, then try the same experiment but with b = 3. Discuss the
     meaning of your results.}
 
+    The code can be found at \url{https://github.com/hannagabor/SBRL/blob/master/8.8/trajectory_sampling.py}.
+
+
     My results are a bit different from the results in the book. I couldn't find the difference in the code,
     and the results are not that different. Anyway, my results for the $b = 1$ and $b = 3$
     cases are the following. (The diagrams show the average of $100$ runs.)
