--- a/10.tex
+++ b/10.tex
@@ -55,5 +55,14 @@
       \ENDFOR
     \end{algorithmic}
   \end{algorithm}
+
+  \item \textit{Why do the results shown in Figure 10.4 have higher standard errors at
+  large n than at small n?}
+
+  If $n$ is large, it's less predictable where we will end up in $n$ steps. This causes
+  our estimates to have a bigger standard deviation. That in turn, will cause the steps
+  to be more varied among different runs.
+  
+
 \end{enumerate}
 \end{document}
