--- a/10.tex
+++ b/10.tex
@@ -144,41 +144,41 @@
     \lim\limits_{h \rightarrow \infty}
     \sum\limits_{t = 0}^h \gamma^t(\mathbb{E}(R_{t + 1} | S_0 = A) - r(\pi))
     &= \gamma^2 \sum\limits_{t = 0}^\infty (\gamma^3)^t - r(\pi)
-    \sum\limits_{t = 0}^\infty \gamma^t
-    = \frac{\gamma^2}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
+    \sum\limits_{t = 0}^\infty \gamma^t\\
+    &= \frac{\gamma^2}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
     v_\pi(A) &= \lim\limits_{\gamma \rightarrow 1}
-    \frac{\gamma^2}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}
-    = \lim\limits_{\gamma \rightarrow 1}
-    \frac{3 \gamma^2 - (1 + \gamma + \gamma^2)}{3(1 - \gamma^3)}\\
+    \frac{\gamma^2}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
     &= \lim\limits_{\gamma \rightarrow 1}
-    \frac{2\gamma^2 - \gamma - 1}{3(1 - \gamma^3)}
-    = \lim\limits_{\gamma \rightarrow 1} \frac{-2 \gamma - 1}{3(1 + \gamma + \gamma^2)}
+    \frac{3 \gamma^2 - (1 + \gamma + \gamma^2)}{3(1 - \gamma^3)}
+    = \lim\limits_{\gamma \rightarrow 1}
+    \frac{2\gamma^2 - \gamma - 1}{3(1 - \gamma^3)}\\
+    &= \lim\limits_{\gamma \rightarrow 1} \frac{-2 \gamma - 1}{3(1 + \gamma + \gamma^2)}
     = -\frac{1}{3}\\
     \lim\limits_{h \rightarrow \infty}
     \sum\limits_{t = 0}^h \gamma^t(\mathbb{E}(R_{t + 1} | S_0 = B) - r(\pi))
     &= \gamma \sum\limits_{t = 0}^\infty (\gamma^3)^t - r(\pi)
-    \sum\limits_{t = 0}^\infty \gamma^t
-    = \frac{\gamma}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
+    \sum\limits_{t = 0}^\infty \gamma^t\\
+    &= \frac{\gamma}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
     v_\pi(B) &= \lim\limits_{\gamma \rightarrow 1}
-    \frac{\gamma}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}
-    = \lim\limits_{\gamma \rightarrow 1}
-    \frac{3 \gamma - (1 + \gamma + \gamma^2)}{3(1 - \gamma^3)}\\
+    \frac{\gamma}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
     &= \lim\limits_{\gamma \rightarrow 1}
-    \frac{-\gamma^2 + 2 \gamma - 1}{3(1 - \gamma^3)}
-    = \lim\limits_{\gamma \rightarrow 1} \frac{\gamma - 1}{3(1 + \gamma + \gamma^2)}
+    \frac{3 \gamma - (1 + \gamma + \gamma^2)}{3(1 - \gamma^3)}
+    = \lim\limits_{\gamma \rightarrow 1}
+    \frac{-\gamma^2 + 2 \gamma - 1}{3(1 - \gamma^3)}\\
+    &= \lim\limits_{\gamma \rightarrow 1} \frac{\gamma - 1}{3(1 + \gamma + \gamma^2)}
     = 0\\
     \lim\limits_{h \rightarrow \infty}
     \sum\limits_{t = 0}^h \gamma^t(\mathbb{E}(R_{t + 1} | S_0 = C) - r(\pi))
     &= \sum\limits_{t = 0}^\infty (\gamma^3)^t - r(\pi)
-    \sum\limits_{t = 0}^\infty \gamma^t
-    = \frac{1}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
+    \sum\limits_{t = 0}^\infty \gamma^t\\
+    &= \frac{1}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
     v_\pi(C) &= \lim\limits_{\gamma \rightarrow 1}
-    \frac{1}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}
-    = \lim\limits_{\gamma \rightarrow 1}
-    \frac{3 - (1 + \gamma + \gamma^2)}{3(1 - \gamma^3)}\\
+    \frac{1}{1 - \gamma^3} - \frac{1}{3(1 - \gamma)}\\
     &= \lim\limits_{\gamma \rightarrow 1}
-    \frac{-\gamma^2 - \gamma  + 2}{3(1 - \gamma^3)}
-    = \lim\limits_{\gamma \rightarrow 1} \frac{\gamma + 2}{3(1 + \gamma + \gamma^2)}
+    \frac{3 - (1 + \gamma + \gamma^2)}{3(1 - \gamma^3)}
+    = \lim\limits_{\gamma \rightarrow 1}
+    \frac{-\gamma^2 - \gamma  + 2}{3(1 - \gamma^3)}\\
+    &= \lim\limits_{\gamma \rightarrow 1} \frac{\gamma + 2}{3(1 + \gamma + \gamma^2)}
     = \frac{1}{3}\\
   \end{align*}
 \end{enumerate}
